--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.1.0",
     "web-vitals": "^0.2.4"
